--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,11 +36,12 @@
   cursor: pointer;
   margin-left: 10px;
 }
-
+/* -------------------Render----------------- */
 .gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: center;
 }
 
 .gallery-card {
@@ -49,13 +50,27 @@
 
 .gallery-img {
   width: 100%;
-  height: 380px;
+  height: 300px;
   object-fit: cover;
 }
-.text-info {
+.text-list {
   display: flex;
+  padding-top: 4px;
+  padding-bottom: 4px;
   justify-content: space-around;
 }
+
+.text-title {
+  font-weight: 600;
+  font-size: 14px;
+  text-align: center;
+}
+.text-values {
+  line-height: 24px;
+  font-size: 11px;
+  text-align: center;
+}
+/* -------------Loader------------------------------------- */
 .loader.is-hidden {
   display: none;
 }
