--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,14 @@
 @import url('./reset.css');
 @import url('./base.css');
-
+@import url('./container.css');
 @import url('./reset.css');
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .search-form {
   width: 600px;
   display: flex;
-  margin: 40px auto;
-  /* margin-bottom: 40px; */
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .search-input {
@@ -53,6 +46,13 @@
   height: 300px;
   object-fit: cover;
 }
+.gallery-img:hover,
+.gallery-img:focus {
+  transform: scale(1.05);
+}
+.gallery-img {
+  transition: all 0.3s ease-in-out;
+}
 .text-list {
   display: flex;
   padding-top: 4px;
@@ -79,6 +79,8 @@
   height: 48px;
   border-radius: 50%;
   position: relative;
+  top: 30px;
+  left: 550px;
   animation: rotate 1s linear infinite;
 }
 .loader::before,
