--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,19 +48,19 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
 }
-
+.gallery-card:hover,
+.gallery-card:focus {
+  transform: scale(1.05);
+}
+.gallery-card {
+  transition: all 0.3s ease-in-out;
+}
 .gallery-img {
   width: 100%;
   height: 300px;
   object-fit: cover;
 }
-.gallery-img:hover,
-.gallery-img:focus {
-  transform: scale(1.05);
-}
-.gallery-img {
-  transition: all 0.3s ease-in-out;
-}
+
 .text-list {
   display: flex;
   padding-top: 4px;
